Issue #15110: Fix the tracebacks generated by "import xxx" to not show the importlib stack frames.